Version 3.0 (PreZ <prez@antisocial.com>)
-----------

1997/??/?? .8	Changed the way CLONE detection works (MAJORLY!)
		Added "CLONE" for allowing more than "Default max clones"
		Fixed bug that didnt reset "current online" lists.
		Added "is already there" and "kill all matching" to akill
		Added chanserv Auto-Unban for when ppls are banned on a
		    channel by someone equal to or lower than them.
		Capped the chanserv levels (to stop the "10000" bug).
		Fixed the chanserv UNBAN option so it does ALL bans.
		Added 'bounce bans on link' for def_level[2]+ (10 usually)
1997/11/20 .7	Fixed a few bugs (nickserv IDENT, Globals and Mass -v's)
		Removed SKELETON defines - obsolite by Pick 'n' Choose.
		Removed test/ directory - was old, outdated and useless!
		Added (optional) mask restrictions to USERLIST and CHANLIST.
		AKILL mask's must be >7 chars in length (stop *@*.com).
		Added Services Restart/Reconnect - see config.h for details.
		Added Services Leveling to replace READONLY - better way of
		    implementing backup services versions, etc.
1997/11/10 .6	Fixed up the "Pick 'n' Choose" section of config.h so it
		    now actually makes the end result smaller :)
		Added ChanServ and NickServ SUSPEND/UNSUSPEND functions
		AKILL's will now expire after a time specified in config.h
		Added PAKILL - non-expiring AKILLS settable by SOP's
		Channel/Nick memos will get erased with the channel/nick
		Added ON/OFF so u can enable/disable services without QUIT
		ON, OFF, QUIT, SHUTDOWN and RAW are passworded (config.h)
1997/11/05 .5	Implemented DAL4.4.15+ Services Support, Including:
		    Killing users without a Killed (IrcOp (reason))
		    Server and Nick quarentining via. OperServ
		    Setting of nick's modes with MODE command.
		    CHANGE nick instead of KILL it on nick protection
		SOP's get help for their commands in /msg OperServ HELP
		Memo Forwarding To/From Nick/Channel (in any combo)
		Message to users when they /oper (services.omsg)